--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       APP_ENV: local
       APP_DEBUG: true
-      APP_KEY: base64:your-app-key-here
+      APP_KEY: ${APP_KEY}
       DB_CONNECTION: sqlite
       DB_DATABASE: /var/www/database/database.sqlite
     depends_on:
