--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,13 @@ services:
       APP_ENV: local
       APP_DEBUG: true
       APP_KEY: ${APP_KEY}
-      DB_CONNECTION: sqlite
-      DB_DATABASE: /var/www/database/database.sqlite
+     
+
+DB_CONNECTION: pgsql
+
+DB_HOST: ${DB_HOST}
+DB_PORT: ${DB_PORT}
+DB_DATABASE: ${DB_DATABASE}
+DB_USERNAME: ${DB_USERNAME}
+DB_PASSWORD: ${DB_PASSWORD}
+
