--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
      
 
 DB_CONNECTION: pgsql
-
+DB_URL: ${DB_URL}
 DB_HOST: ${DB_HOST}
 DB_PORT: ${DB_PORT}
 DB_DATABASE: ${DB_DATABASE}
